--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/png" href="/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <!--
+      index.html
+      - Main HTML entry for Cyberia React.
+      - Sets up root div, favicon, meta tags, and anti-scraper meta.
+      - No unused code or meta tags.
+    -->
   </head>
   <body>
     <div id="root"></div>
