--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       - Sets up root div, favicon, meta tags, and anti-scraper meta.
       - No unused code or meta tags.
     -->
+    <link rel="preload" as="image" href="/assets/navi.png" />
+    <link rel="preload" as="image" href="/assets/lain.gif" />
   </head>
   <body>
     <div id="root"></div>
