[extended styling + archive outline]

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
-<html lang="en">
-  <head>
+<html lang="en">  <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/gif" href="/assets/favicon.gif" />
+    <link rel="icon" type="image/gif" href="./assets/favicon.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zoey's Cyberia</title>
     <!--
@@ -11,8 +10,8 @@
       - Sets up root div, favicon, meta tags, and anti-scraper meta.
       - No unused code or meta tags.
     -->
-    <link rel="preload" as="image" href="/assets/navi.png" />
-    <link rel="preload" as="image" href="/assets/lain.gif" />
+    <link rel="preload" as="image" href="./assets/navi.png" />
+    <link rel="preload" as="image" href="./assets/lain.gif" />
   </head>
   <body>
     <div id="root"></div>
