--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!doctype html>
-<html lang="en">  <head>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/gif" href="./assets/favicon.gif" />
+    <link rel="icon" type="image/jpeg" href="/favicon.gif" />
+    <link rel="preload" href="/assets/typewriter.ttf" as="font" type="font/ttf" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zoey's Cyberia</title>
-    <!--
-      index.html
-      - Main HTML entry for Cyberia React.
-      - Sets up root div, favicon, meta tags, and anti-scraper meta.
-      - No unused code or meta tags.
-    -->
-    <link rel="preload" as="image" href="./assets/navi.png" />
-    <link rel="preload" as="image" href="./assets/lain.gif" />
+    <meta name="robots" content="noindex, nofollow" />
+    <title>Cyberia</title>
   </head>
   <body>
     <div id="root"></div>
