--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>    <meta charset="UTF-8" />
     <meta name="google-site-verification" content="XNocIkP3Q2hbZRO2mnK3fZyqAd-OT4z96GI6KlYgRt0" />
     <meta name="description" content="Welcome to the personal portfolio of Zoey Vo, developer exploring digital systems." />
-    <meta name="keywords" content="Zoey Vo, developer, portfolio, web development, react, javascript, frontend, cyberia, digital realm" />
+    <meta name="keywords" content="Zoey Vo, developer, portfolio, web development, react, javascript, frontend, digital portfolio, personal portfolio, Zoey, Vo, Net" />    
     <link rel="icon" type="image/jpeg" href="/favicon.gif" />
-    <link rel="preload" href="/assets/typewriter.ttf" as="font" type="font/ttf" crossorigin />
+    <link rel="preload" href="/assets/fonts/typewriter.ttf" as="font" type="font/ttf" crossorigin />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>zoeyvo</title>
     
@@ -22,7 +22,7 @@
       ],
       "jobTitle": "Developer",
       "description": "Zoey Vo's Portfolio website showcasing her development projects and skills",
-      "knowsAbout": ["Web Development", "React", "JavaScript", "Frontend Development"],
+      "knowsAbout": ["Web Development", "React", "JavaScript", "Frontend Development", "Backend Development"],
       "mainEntityOfPage": {
         "@type": "WebPage",
         "@id": "https://zoeyvo.net"
