[link new gsc acc]

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>    <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="XNocIkP3Q2hbZRO2mnK3fZyqAd-OT4z96GI6KlYgRt0" />
+  <head>   
+    <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="cSRNJSptcAjpY5QL-kVeJPV46fKy0IuYHg7tsY6EXbU" />
     <meta name="description" content="Welcome to the personal portfolio of Zoey Vo, developer exploring digital systems." />
     <meta name="keywords" content="Zoey Vo, developer, portfolio, web development, react, javascript, frontend, digital portfolio, personal portfolio, Zoey, Vo, Net" />    
     <link rel="icon" type="image/jpeg" href="/favicon.gif" />
